ADOP-1205: Sonar issues fix